Ready to publish

--- a/ini/fv_change-units.ini
+++ b/ini/fv_change-units.ini
@@ -37,6 +37,7 @@ tool_tip = Change units for cut depth
 [PARAM_ITEMS]
 name = Items
 type = items
+icon = items.png
 tool_tip = If enabled, these items will use alternate units
 
 [DEFINITIONS]
