--- a/ini/mill/fv_circle-2.ini
+++ b/ini/mill/fv_circle-2.ini
@@ -4,7 +4,7 @@ name = Circle
 image = circle.png
 type = circle
 html_help = help/circles.html
-help = 	<b>Creates a circle</b>
+help = 	<b>Creates a circle by 2 points</b>
 	Points are the ends of the diameter
 	Can also create a D shape
 order = ena fcut h1 x1 y1 x2 y2 h2 f rot h3 opt dir s dpt
@@ -118,11 +118,13 @@ content =
 [CALL]
 content = 
  	o<#self_id> if [#param_ena]
-		#<dely> = [#param_y2 - #param_y1]
-		#<delx> = [#param_x2 - #param_x1]
-		#<diam> = SQRT[#<delx> * #<delx> + #<dely> * #<dely>]
- 		o<fv_circle> CALL [#<delx>] [#<delx>] [#<diam>] [#param_f*#<_units_r>] [#param_rot] [#param_opt] [#param_dir] [#param_s] [#param_dpt*#<_units_d>] [#param_fcut]
-	o<#self_id> endif
+ 		#<delx> = [#param_x2 - #param_x1]
+ 		#<dely> = [#param_y2 - #param_y1]
+ 		#<diam> = SQRT[#<delx> * #<delx> + #<dely> * #<dely>]
+ 		#<cx> = [[#param_x1 + #param_x2] / 2]
+ 		#<cy> = [[#param_y1 + #param_y2] / 2]
+ 		o<fv_circle> CALL [#<cx>] [#<cy>] [#<diam>] [#param_f*#<_units_r>] [#param_rot] [#param_opt] [#param_dir] [#param_s] [#param_dpt*#<_units_d>] [#param_fcut]
+ 	o<#self_id> endif
 		
 [BEFORE]
 content = 
