--- a/ini/mill/fv_design-cube.ini
+++ b/ini/mill/fv_design-cube.ini
@@ -63,10 +63,10 @@ value = 2
 
 [PARAM_D]
 name = Depth 
-type = float
+type = string
 icon = height.png
 tool_tip = Negative value is usual
-value = 0.5
+value = #<_depth>
 
 [DEFINITIONS]
 content = 
