--- a/ini/mill/fv_slot-arc.ini
+++ b/ini/mill/fv_slot-arc.ini
@@ -2,7 +2,7 @@
 icon = radial-slot.png
 name = Radial Slot
 image = radial-slot.png
-type = slot
+type = slot-arc
 help = 	<b>Creates a radial slot</b>	
 order = ena fc h1 cx cy r strt ext w h2 opt dir s dpt
 
