--- a/ini/mill/fv_taper-hole.ini
+++ b/ini/mill/fv_taper-hole.ini
@@ -2,7 +2,7 @@
 icon = circle.png
 name = Taper Hole
 image = circle.png
-type = circle
+type = t-hole
 html_help = help/taper-hole.html
 tool_tip = 	<b>Creates a taper hole</b>
 order = ena fcut h1 cx cy d ang h3 dir s stp dpt
@@ -88,15 +88,9 @@ value = #<_depth>
 
 [DEFINITIONS]
 content = 
-	<eval>self.include_once("dot.ngc")</eval>
-	<eval>self.include_once("line.ngc")</eval>
-	<eval>self.include_once("rotate-xy.ngc")</eval>
 	<eval>self.include_once("fv_cut-to.ngc")</eval>
-	<eval>self.include_once("fv_entry-angle.ngc")</eval>
-	<eval>self.include_once("fv_entry-arc.ngc")</eval>
-	
-	<eval>self.include_once("fv_taper-hole.ngc")</eval>	
-
+	<eval>self.include_once("fv_entry-arc.ngc")</eval>	
+	<eval>self.include_once("fv_taper-hole.ngc")</eval>
 
 [CALL]
 content = 
