Modified examples and removed some grouping

--- a/ini/fv_drill-change.ini
+++ b/ini/fv_drill-change.ini
@@ -5,7 +5,7 @@ image = tool-change.png
 type = drillchng
 help = <b>Add drill change gcode</b>
 	Changes setting accordingly
-order = ena h1 n act tp cooling h2 h4 speed feed h3 dm r d q items
+order = ena h1 n act tp cooling h2 h4 speed feed h3 dm r d q
 
 [PARAM_ENA]
 name = Enabled
@@ -106,12 +106,6 @@ minimum_value = 0.01
 icon = 
 tool_tip = 
 value = 0.1
-
-[PARAM_ITEMS]
-name = Items
-type = items
-icon = items.png
-tool_tip = Subroutines that use this drill
 
 [CALL]
 content =
