--- a/lathe.ini
+++ b/lathe.ini
@@ -22,7 +22,7 @@ DEBUG = 1
 # Name of display program, e.g., xemc
 DISPLAY = axis
 
-GLADEVCP = -U --catalog=lathe features.ui
+#GLADEVCP = -U --catalog=lathe features.ui
 
 # Cycle time, in seconds, that display will sleep between polls
 CYCLE_TIME =            0.100
