--- a/mill.ini
+++ b/mill.ini
@@ -45,7 +45,7 @@ DEFAULT_LINEAR_VELOCITY = .25
 DEFAULT_SPINDLE_SPEED = 200
 
 # Prefix to be used
-PROGRAM_PREFIX = ./scripts
+PROGRAM_PREFIX = /home/fernand/linuxcnc-features/scripts
 
 # Introductory graphic
 INTRO_GRAPHIC = linuxcnc.gif
@@ -79,7 +79,7 @@ CYCLE_TIME =            0.001
 
 # File containing interpreter variables
 PARAMETER_FILE = sim.var
-SUBROUTINE_PATH = ./lib:./scripts
+SUBROUTINE_PATH = /home/fernand/linuxcnc-features/lib:/home/fernand/linuxcnc-features/scripts
 
 # Motion control section ------------------------------------------------------
 [EMCMOT]
