--- a/ini/lathe/thread-adv.ini
+++ b/ini/lathe/thread-adv.ini
@@ -4,7 +4,7 @@ name = Lathe thread
 type = thread
 image = images/threading.png
 help = 	<big>Create thread</big>
-order = X0 Z0 P Z I J R K Q H E L
+order = x0 z0 p z i j r k q h e l feed spindle
 
 
 [PARAM_X0]
@@ -106,6 +106,13 @@ icon = icons/tool-feed.png
 tool_tip =  Feed
 value = #<_global_feed>
 
+[PARAM_SPINDLE]
+name = Spindle Speed
+type = int
+icon = spindle.png
+tool_tip = Spindle speed
+value = 400
+
 
 [DEFINITIONS]
 content = 
@@ -113,20 +120,16 @@ content =
 [CALL]
 content = 
 	#<p> = [#param_p]
-	#<z> = [#param_z]
-	#<i> = [#param_i]
-	#<j> = [#param_j]
-	#<r> = [#param_r]
 	#<k> = [#param_k]
-	#<q> = [#param_q]
-	#<h> = [#param_h]
-	#<e> = [#param_e]
-	#<l> = [#param_l]
+
 	G0 X#<_global_rappid>
 	G0 X[#param_x0]
 	G0 Z[#param_z0]
 	
+	S#param_spindle M3
+	
 	G76 P[#param_p] Z[#param_z] I[#param_i] J[#param_j] R[#param_r] K[#param_k] Q[#param_q] H[#param_h] E[#param_e] L[#param_l]
+	
 [BEFORE]
 content =		
 [AFTER]
