--- a/ini/lathe/cutting-params.ini
+++ b/ini/lathe/cutting-params.ini
@@ -3,7 +3,7 @@ icon = icons/lathe-cutting-params.png
 name = Lathe cutting parameters
 image = images/lathe-cutting-params.png
 type = cutting-params
-help = Sets global cutting depth, depth step, surface origin, and rappid distance.
+help = <b>Sets global cutting depth, depth step, surface origin, and rappid distance.</b>
 order = surface surface_id depth depth_step feed spindle rappid rappid_id rappid_z final final_num final_feed final_spindle flood mist
 
 [PARAM_SURFACE]
