--- a/ini/lathe/face.ini
+++ b/ini/lathe/face.ini
@@ -3,8 +3,7 @@ icon = icons/lathe-facing.png
 name = Facing
 type = facing
 image = images/lathe-facing.png
-help = 	<big>OD/OD tapper</big>
-	Use #<D0> to refer to starting D
+help = 	<b>OD/OD tapper</b>
 order = z d
 
 [PARAM_Z]
