--- a/ini/lathe/thread-adv.ini
+++ b/ini/lathe/thread-adv.ini
@@ -3,7 +3,7 @@ icon = icons/threading.png
 name = Lathe thread
 type = thread
 image = images/threading.png
-help = 	<big>Create thread</big>
+help = 	<b>Create thread</b>
 order = x0 z0 p z i j r k q h e l feed spindle
 
 
@@ -109,7 +109,7 @@ value = #<_global_feed>
 [PARAM_SPINDLE]
 name = Spindle Speed
 type = int
-icon = spindle.png
+icon = tool-spindle.png
 tool_tip = Spindle speed
 value = 400
 
