--- a/ini/lathe/tool-change.ini
+++ b/ini/lathe/tool-change.ini
@@ -3,7 +3,7 @@ icon = lathe-tool-change.png
 name = Change tool
 type = tool-chng
 image = lathe-tool-change.png
-help = 	<big>Change tool</big>
+help = 	<b>Change tool</b>
 	
 order = num gcode
 		
