--- a/lathe.ini
+++ b/lathe.ini
@@ -22,7 +22,8 @@ DEBUG = 1
 # Name of display program, e.g., xemc
 DISPLAY = axis
 
-#GLADEVCP = -U --catalog=lathe features.ui
+GLADEVCP = -U --catalog=lathe features.ui
+FEATURES_PATH = /home/fernand/linuxcnc-features
 
 # Cycle time, in seconds, that display will sleep between polls
 CYCLE_TIME =            0.100
@@ -45,6 +46,8 @@ MAX_LINEAR_VELOCITY =   1.5
 MIN_VELOCITY = .01
 DEFAULT_LINEAR_VELOCITY = .25
 DEFAULT_SPINDLE_SPEED = 200
+
+LATHE = 1
 
 # Prefix to be used
 PROGRAM_PREFIX = ./scripts
@@ -84,7 +87,7 @@ CYCLE_TIME =            0.001
 
 # File containing interpreter variables
 PARAMETER_FILE = sim.var
-SUBROUTINE_PATH = ./lib:../nc_files/ngcgui_lib:../ngcgui_lib/utililysubs
+SUBROUTINE_PATH = /home/fernand/linuxcnc-features/lib:/home/fernand/linuxcnc-features/scripts
 RS274NGC_STARTUP_CODE = G17 G20 G40 G49 G64 P0.001 G80 G90 G94 G97 G98
 
 # Motion control section ------------------------------------------------------
