--- a/mill.ini
+++ b/mill.ini
@@ -21,6 +21,7 @@ DEBUG =    1
 
 DISPLAY = axis
 GLADEVCP = -U --catalog=mill features.ui
+FEATURES_PATH = /home/fernand/linuxcnc-features
 
 # Cycle time, in seconds, that display will sleep between polls
 CYCLE_TIME =            0.100
