--- a/ini/mm/lathe/thread-adv.ini
+++ b/ini/mm/lathe/thread-adv.ini
@@ -4,8 +4,13 @@ name = Lathe thread
 type = thread
 image = images/threading.png
 help = 	<b>Create thread</b>
-order = x0 z0 p z i j r k q h e l feed spindle
+order = x0 z0 units p z i j r k q h e l feed spindle
 
+[PARAM_UNITS]
+name = Units
+type = combo
+options = Metric=0:Inches=1
+value = 0
 
 [PARAM_X0]
 name = Start point X
