--- a/ini/mm/lathe/tool-change.ini
+++ b/ini/mm/lathe/tool-change.ini
@@ -10,6 +10,7 @@ order = num gcode
 [PARAM_NUM]
 name = Tool number
 type = int
+minimum_value = 0
 icon = icons/line.png
 tool_tip = Tool number
 value = 1
