--- a/lathe-mm.ini
+++ b/lathe-mm.ini
@@ -22,7 +22,7 @@ DEBUG = 1
 # Name of display program, e.g., xemc
 DISPLAY = axis
 
-GLADEVCP = -U --catalog=lathe features.ui
+GLADEVCP = -U --catalog=lathe-mm features.ui
 FEATURES_PATH = /home/fernand/linuxcnc-features
 
 # Cycle time, in seconds, that display will sleep between polls
@@ -139,7 +139,7 @@ MDI_COMMAND = G40 G49 G53 G0 X0 Y0 Z0
 AXES =                  3
 COORDINATES =           X Y Z
 HOME =                  0 0 0
-LINEAR_UNITS =          inch
+LINEAR_UNITS =          metric
 ANGULAR_UNITS =         degree
 CYCLE_TIME =            0.010
 DEFAULT_VELOCITY =      5
@@ -228,6 +228,6 @@ EMCIO = 		io
 CYCLE_TIME =    0.100
 
 # tool table file
-TOOL_TABLE = lathe.tbl
+TOOL_TABLE = lathe-mm.tbl
 TOOL_CHANGE_POSITION = 0 0 0
 TOOL_CHANGE_QUILL_UP = 1
