--- a/ini/mill/fv_taper-hole.ini
+++ b/ini/mill/fv_taper-hole.ini
@@ -4,7 +4,7 @@ name = Taper Hole
 image = circle.png
 type = t-hole
 html_help = help/taper-hole.html
-tool_tip = 	<b>Creates a taper hole</b>
+help = 	<b>Creates a taper hole</b>
 order = ena fcut h1 cx cy d ang h3 dir s stp dpt
 
 [PARAM_ENA]
